# Rag_project

./: .gitignore  README.md  main.py  notebook.ipynb  persistent_rag_ingest.ipynb  pyproject.toml  rag.ipynb
01_agentic_rag/: agents.ipynb  hw_agent_rag_01.ipynb  hw_helper.py  notebook.ipynb  persistent_rag_ingest.ipynb  rag.ipynb  rag_helper.py
02_vector_search/: vector_search.ipynb  vector_search_persistent.ipynb  vector_search_pgvector.ipynb
02_vector_search/hw_vector_search/: hw_vec_search.ipynb  main.py  pyproject.toml
03_orchestration/: hw_orchestration.md  pyproject.toml
04_evaluation/: data_gen.ipynb  llm_judge.ipynb  rag_evaluation.ipynb  search_evaluation.ipynb
04_evaluation/data/: ground_truth.csv  rag_answers.csv  rag_evaluations_results.csv
04_evaluation/hw_evaluation/: .gitignore  hw_evaluation.ipynb  main.py  pyproject.toml
